4568713181927b8a7ff3bcf160089c79cf32d0d4 Dev: Fix text alignment when in a narrow window Dev: Fix Semantic UI integration - wasn't applying a lot of the custom styles
Sync to source repo @4568713181927b8a7ff3bcf160089c79cf32d0d4

--- a/css/dataTables.bulma.css
+++ b/css/dataTables.bulma.css
@@ -401,7 +401,7 @@ div.dt-container div.dt-layout-table > div {
   }
 }
 @media screen and (max-width: 767px) {
-  div.dt-container > div.columns > div.column {
+  div.dt-container > div.columns:not(.dt-layout-table) > div.column {
     display: block !important;
     text-align: center;
   }
